// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SauceReporter .prepareAssets should return a list of assets 1`] = `
Array [
  Array [
    "results/spec/file.test.js",
  ],
]
`;

exports[`SauceReporter .prepareAssets should return a list of assets 2`] = `
Array [
  "console.log",
  "results/spec/file.test.js/spec__file.test.js__fake/path/to/screenshot-1.png",
  "results/spec/file.test.js/spec__file.test.js__fake/path/to/screenshot-2.png",
  "results/spec__file.test.js.mp4",
  "results/spec__file.test.js.json",
  "results/spec__file.test.js.xml",
  "results/video.mp4",
]
`;

exports[`SauceReporter .sauceReporter should create job via global data store 1`] = `
Array [
  Array [
    Object {
      "acl": Array [
        Object {
          "type": "username",
          "value": "fake-user",
        },
      ],
      "attributes": Object {
        "browser": "browser",
        "browser_version": "*",
        "commands_not_successful": 1,
        "container": false,
        "devx": true,
        "log_url": "test",
        "os": "test",
        "performance_enabled": "true",
        "public": "team",
        "record_logs": true,
        "record_mp4": "true",
        "record_screenshots": "true",
        "record_video": "true",
        "video_url": "test",
      },
      "live": false,
      "metadata": Object {},
      "name": "Fake Name - build",
      "platform": "webdriver",
      "source": "vdc",
      "status": "complete",
      "tags": undefined,
    },
  ],
]
`;

exports[`SauceReporter .sauceReporter should output err when upload failed 1`] = `
Array [
  Array [
    "some fake error",
  ],
]
`;
